# Crawler_warmane

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_crawler_rpi.sh  start_crawler_tui_rpi.sh
armory/: __init__.py  analyzer.py  constants.py  fileio.py  gearscore.py  health.py  items.py  match_history.py  models.py  network.py  parser.py  runtime.py
crawler/: __init__.py  __main__.py  base.py  cli.py  cycle.py  discovery.py  history.py  http.py  profiles.py  state.py
docs/: analise_parametros_crawler.md  tui_ux_spec.json
docs/pipeline/: PIPELINE_CHECKLIST.md  lessons.md  refactoring_plan.md  todo.md
scripts/: bump_version.sh  lint_python.ps1  lint_rust.ps1
tests/: test_coupling_launcher_contract.py  test_crawler_integration.py  test_network_wall_timeout.py  test_tui_rs_health_checker.py  test_tui_rs_runtime.py
tui_rs/: Cargo.toml  README.md  check_tui_health.py  run_tui_rs.sh
tui_rs/.github/workflows/: ci.yml
tui_rs/src/: app.rs  config_editor.rs  health.rs  ipc.rs  main.rs  snapshot.rs  theme.rs  time_utils.rs  ui.rs
tui_rs/tests/: test_health_status_e2e.py
